--- a/notebooks/LLM101_v1.ipynb
+++ b/notebooks/LLM101_v1.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,18 +84,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "content='Hei! Hvordan kan jeg hjelpe deg i dag?' additional_kwargs={'refusal': None} response_metadata={'token_usage': {'completion_tokens': 11, 'prompt_tokens': 9, 'total_tokens': 20, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4o-mini-2024-07-18', 'system_fingerprint': 'fp_7a53abb7a2', 'prompt_filter_results': [{'prompt_index': 0, 'content_filter_results': {'hate': {'filtered': False, 'severity': 'safe'}, 'jailbreak': {'filtered': False, 'detected': False}, 'self_harm': {'filtered': False, 'severity': 'safe'}, 'sexual': {'filtered': False, 'severity': 'safe'}, 'violence': {'filtered': False, 'severity': 'safe'}}}], 'finish_reason': 'stop', 'logprobs': None, 'content_filter_results': {'hate': {'filtered': False, 'severity': 'safe'}, 'protected_material_code': {'filtered': False, 'detected': False}, 'protected_material_text': {'filtered': False, 'detected': False}, 'self_harm': {'filtered': False, 'severity': 'safe'}, 'sexual': {'filtered': False, 'severity': 'safe'}, 'violence': {'filtered': False, 'severity': 'safe'}}} id='run-1b2e8e6d-35b1-4fef-b93e-aa605ee3648e-0' usage_metadata={'input_tokens': 9, 'output_tokens': 11, 'total_tokens': 20, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}}\n",
-      "Hei! Hvordan kan jeg hjelpe deg i dag?\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "prompt = 'Hei!'\n",
     "response = Llm.llm.invoke(prompt)\n",
@@ -116,15 +107,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Enkel bruk av structured output \n",
     "# Hva i alle dager er pydantic? :D\n",
     "# Lag en enkel klasse og kjør\n",
-    "from pydantic import BaseModel, Field\n",
-    "from typing import Literal, Optional\n",
     "\n",
     "class Categorize(BaseModel):\n",
     "    \"Categorization of feedback on IT-services.\"\n",
@@ -137,17 +126,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "category='IT-services'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "structured_llm = Llm.llm.with_structured_output(   #Gå igjennom denne, hvordan bruker man structured output?\n",
     "        Categorize, method=\"function_calling\"\n",
@@ -159,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,18 +177,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (3508461298.py, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31m] = Field(\u001b[39m\n    ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class CategorizeFromOptions2(BaseModel):\n",
     "    \"\"\"Categorization of IT-questionaire feedback.\"\"\"\n",
@@ -229,19 +201,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "_IncompleteInputError",
-     "evalue": "incomplete input (2397846824.py, line 51)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 51\u001b[39m\n\u001b[31m    \u001b[39m\n    ^\n\u001b[31m_IncompleteInputError\u001b[39m\u001b[31m:\u001b[39m incomplete input\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "from pydantic import BaseModel, Field\n",
+    "from typing import Literal, Optional\n",
+    "\n",
     "# Kan de mekke på disse selv? Hvordan kan vi gjøre dette steget mer interaktivt\n",
     "\n",
     "\n",
@@ -311,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,8 +290,6 @@
     "    \"\"\"\n",
     "\n",
     "    # Load a DataFrame with a specific version of a CSV\n",
-    "    file_path = \"../files/raw_data_LLM101.csv\"\n",
-    "    df_o = pd.read_csv(file_path)\n",
     "\n",
     "    enr_path = \"../files/forslag_1.csv\"\n",
     "    df = pd.read_csv(enr_path)#.head(20)\n",
@@ -365,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,6 +337,7 @@
     "def categorize_feedback(feedback_txt : str, struktur, llm_model) -> dict:\n",
     "    # Prompt\n",
     "    task = f\"\"\"\n",
+    "    PROMT\n",
     "    Catgorize the feedback: {feedback_txt}.\n",
     "    \"\"\"\n",
     "\n",
@@ -389,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,171 +397,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "15\n",
-      "16\n",
-      "17\n",
-      "18\n",
-      "19\n",
-      "20\n",
-      "21\n",
-      "22\n",
-      "23\n",
-      "24\n",
-      "25\n",
-      "26\n",
-      "27\n",
-      "28\n",
-      "29\n",
-      "30\n",
-      "31\n",
-      "32\n",
-      "33\n",
-      "34\n",
-      "35\n",
-      "36\n",
-      "37\n",
-      "38\n",
-      "39\n",
-      "40\n",
-      "41\n",
-      "42\n",
-      "43\n",
-      "44\n",
-      "45\n",
-      "46\n",
-      "47\n",
-      "48\n",
-      "49\n",
-      "50\n",
-      "                                             Feedback  Category_4O  \\\n",
-      "0   The recent training module on cybersecurity pr...  IT Training   \n",
-      "1   I appreciate the updated training materials fo...  IT Training   \n",
-      "2   The scheduled training sessions have been cons...  IT Training   \n",
-      "3   In the recent workshop for our CRM system, the...  IT Training   \n",
-      "4   Training on modern data analytics has become m...  IT Training   \n",
-      "5   Our hands-on training for remote work tools ha...  IT Training   \n",
-      "6   The new onboarding process for IT training rem...  IT Training   \n",
-      "7   I found the team training on system backups bo...  IT Training   \n",
-      "8   The recurring training updates about IT securi...  IT Training   \n",
-      "9   Our digital transformation training is well-st...  IT Training   \n",
-      "10  Our network performance has been erratic, with...      Network   \n",
-      "11  The daily hiccups in our VPN and internal conn...      Network   \n",
-      "12  Network instability during peak hours leaves m...      Network   \n",
-      "13  Although the network infrastructure is robust,...      Network   \n",
-      "14  Frequent router misconfigurations lead to spor...      Network   \n",
-      "15  The lag during remote access and cloudy connec...      Network   \n",
-      "16  Unexpected network outages during video confer...      Network   \n",
-      "17  IT-support is prompt when addressing common is...   IT Support   \n",
-      "18  I greatly appreciate the help desk's willingne...   IT Support   \n",
-      "19  The resolution process by IT-support is mostly...   IT Support   \n",
-      "20  Every encounter with IT support brings a blend...   IT Support   \n",
-      "21  IT-support's proactive assistance usually brin...   IT Support   \n",
-      "22  Frequent interactions with IT-support reveal a...   IT Support   \n",
-      "23  Although IT-support quickly addresses routine ...   IT Support   \n",
-      "24  My experiences with IT-support are generally p...   IT Support   \n",
-      "25  The new software update brought unpredictable ...   IT Support   \n",
-      "26  Management decisions often appear abstract, le...        Other   \n",
-      "27  While the office layout has seen improvements,...        Other   \n",
-      "28  Recent changes in logistical support seem misg...        Other   \n",
-      "29  New policy revisions sometimes read like riddles.   IT Support   \n",
-      "30    I find myself at a loss with the latest update.   IT Support   \n",
-      "31  Potato internet and unicorn protocols have bec...        Other   \n",
-      "32  Internal communication appears sporadic and el...        Other   \n",
-      "33  Despite the apparent order, there exists an un...        Other   \n",
-      "34  I do not know how to describe the recent syste...  IT Training   \n",
-      "35     The latest patch for our software didn't work.   IT Support   \n",
-      "36  Intermittent issues with old hardware sometime...   IT Support   \n",
-      "37  Recent leadership changes have left me with mi...        Other   \n",
-      "38  The new seating arrangement in our workspace p...        Other   \n",
-      "39  Office supplies seem to vanish without trace, ...        Other   \n",
-      "40  Policy updates occasionally resemble riddles m...   IT Support   \n",
-      "41  The recent internal memo left me scratching my...        Other   \n",
-      "42  Quantum coffee breaks and mysterious break-roo...        Other   \n",
-      "43  While emails fly in rapidly, the underlying me...   IT Support   \n",
-      "44  There’s an inexplicable charm in the randomnes...        Other   \n",
-      "45  The answers I was promised remain as abstract ...   IT Support   \n",
-      "46  While the system promises efficiency with ever...   IT Support   \n",
-      "47  The office printer has turned into a mysteriou...        Other   \n",
-      "48  I sometimes feel like management speaks in rid...        Other   \n",
-      "49  A fleeting thought crossed my mind about the n...      Network   \n",
-      "\n",
-      "    Category_3O  \n",
-      "0   IT Training  \n",
-      "1   IT Training  \n",
-      "2   IT Training  \n",
-      "3   IT Training  \n",
-      "4   IT Training  \n",
-      "5   IT Training  \n",
-      "6   IT Training  \n",
-      "7   IT Training  \n",
-      "8   IT Training  \n",
-      "9   IT Training  \n",
-      "10      Network  \n",
-      "11      Network  \n",
-      "12      Network  \n",
-      "13      Network  \n",
-      "14      Network  \n",
-      "15      Network  \n",
-      "16      Network  \n",
-      "17   IT Support  \n",
-      "18   IT Support  \n",
-      "19   IT Support  \n",
-      "20   IT Support  \n",
-      "21   IT Support  \n",
-      "22   IT Support  \n",
-      "23   IT Support  \n",
-      "24   IT Support  \n",
-      "25   IT Support  \n",
-      "25   IT Support  \n",
-      "26        Other  \n",
-      "27        Other  \n",
-      "28   IT Support  \n",
-      "28   IT Support  \n",
-      "29        Other  \n",
-      "30  IT Training  \n",
-      "31      Network  \n",
-      "32        Other  \n",
-      "33        Other  \n",
-      "34        Other  \n",
-      "35   IT Support  \n",
-      "36   IT Support  \n",
-      "37        Other  \n",
-      "38        Other  \n",
-      "39        Other  \n",
-      "40        Other  \n",
-      "41        Other  \n",
-      "42        Other  \n",
-      "43        Other  \n",
-      "44        Other  \n",
-      "45   IT Support  \n",
-      "46        Other  \n",
-      "47   IT Support  \n",
-      "48        Other  \n",
-      "49      Network  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## returnerer kategorisert feedback\n",
     "\n",
@@ -625,38 +428,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                             Feedback  Category_4O Category_3O\n",
-      "25  The new software update brought unpredictable ...        Other  IT Support\n",
-      "26  Management decisions often appear abstract, le...        Other       Other\n",
-      "27  While the office layout has seen improvements,...        Other       Other\n",
-      "28  Recent changes in logistical support seem misg...        Other  IT Support\n",
-      "29  New policy revisions sometimes read like riddles.        Other       Other\n",
-      "31  Potato internet and unicorn protocols have bec...        Other     Network\n",
-      "32  Internal communication appears sporadic and el...        Other       Other\n",
-      "33  Despite the apparent order, there exists an un...        Other       Other\n",
-      "34  I do not know how to describe the recent syste...  IT Training       Other\n",
-      "37  Recent leadership changes have left me with mi...        Other       Other\n",
-      "38  The new seating arrangement in our workspace p...        Other       Other\n",
-      "39  Office supplies seem to vanish without trace, ...        Other       Other\n",
-      "40  Policy updates occasionally resemble riddles m...        Other       Other\n",
-      "41  The recent internal memo left me scratching my...        Other       Other\n",
-      "42  Quantum coffee breaks and mysterious break-roo...        Other       Other\n",
-      "43  While emails fly in rapidly, the underlying me...        Other       Other\n",
-      "44  There’s an inexplicable charm in the randomnes...        Other       Other\n",
-      "45  The answers I was promised remain as abstract ...        Other  IT Support\n",
-      "46  While the system promises efficiency with ever...   IT Support       Other\n",
-      "47  The office printer has turned into a mysteriou...        Other  IT Support\n",
-      "48  I sometimes feel like management speaks in rid...        Other       Other\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "others_df = cat_df[(cat_df['Category_3O'] == 'Other') | (cat_df['Category_4O'] == 'Other')]\n",
     "print(others_df)"
@@ -664,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,18 +455,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'category': 'Support, Performance, Usability', 'reason': 'Support captures the feedback related to assistance and help provided by the IT team. Performance addresses the efficiency and speed of IT services, while Usability focuses on the ease of use and user experience of the IT systems. Each category highlights a distinct aspect of the feedback without overlapping with the others.'}\n",
-      "{'category': 'Support, Infrastructure, Communication', 'reason': '‘Support’ captures feedback on the responsiveness and quality of IT helpdesk services; ‘Infrastructure’ addresses issues related to system performance, reliability, and hardware/software stability; and ‘Communication’ reflects concerns over clarity, updates, and information flow. These three distinct, one-word terms collectively and exclusively cover the core themes expressed in the feedback.'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dataa = others_df[\"Feedback\"]\n",
     "f = \"\"\"Analyze the following IT service feedback carefully. Identify and suggest three categories that best organize the feedback into clear, distinct, and non-overlapping topics (MECE: Mutually Exclusive, Collectively Exhaustive). \n",
@@ -714,21 +479,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'cat_1'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[51]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m f \u001b[38;5;129;01min\u001b[39;00m others_df[\u001b[33m\"\u001b[39m\u001b[33mFeedback\u001b[39m\u001b[33m\"\u001b[39m]:\n\u001b[32m      7\u001b[39m     output_i = categorize_feedback(feedback_txt = f, struktur = Categorize, llm_model = Llm.llm)\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m     responses_new_cat.append({\u001b[33m'\u001b[39m\u001b[33mFeedback\u001b[39m\u001b[33m'\u001b[39m: f,\u001b[33m'\u001b[39m\u001b[33mCategory\u001b[39m\u001b[33m'\u001b[39m: \u001b[43moutput_i\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mcat_1\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m})\n\u001b[32m     10\u001b[39m new_cat_df = pd.DataFrame(responses_new_cat)\n\u001b[32m     11\u001b[39m \u001b[38;5;28mprint\u001b[39m(new_cat_df)\n",
-      "\u001b[31mKeyError\u001b[39m: 'cat_1'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## returnerer kategorisert feedback\n",
     "\n",
