Rewrote first part of notebook to use LCEL. Added section about intro to LCEL

--- a/notebooks/LLM101_v2.ipynb
+++ b/notebooks/LLM101_v2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Intro til språkmodeller"
+    "# LLM 101"
    ]
   },
   {
@@ -29,8 +29,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# AzureChatOpenAI\n",
-    "### Språkmodellene"
+    "## Task\n",
+    "\n",
+    "TODO:\n",
+    "- Task description"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "enr_path = \"../files/random_out.csv\"\n",
+    "df = pd.read_csv(enr_path)\n",
+    "df.head()\n",
+    "\n",
+    "## Using a language model through the API"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using a language model through the API"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TODO: Intro til språkmodeller\n",
+    "- Slik kaller man en språkmodell\n",
+    "- Hva er temperaturparameteren"
    ]
   },
   {
@@ -48,38 +80,17 @@
     "load_dotenv(find_dotenv(), override=True)\n",
     "\n",
     "\n",
-    "# Variabler heller enn klasser\n",
-    "class Llm:\n",
-    "    \"\"\"\n",
-    "    Class containing the language model.\n",
-    "    \"\"\"\n",
+    "llm = AzureChatOpenAI(\n",
+    "    azure_deployment=\"gpt-4o-mini\",\n",
+    "    model=os.environ.get(\"OPENAI_MODEL_GPT_4O-MINI\", default=\"gpt-4o-mini\"),\n",
+    "    temperature=0,\n",
+    ")\n",
     "\n",
-    "    llm = AzureChatOpenAI(\n",
-    "        azure_deployment=os.environ[\"AZURE_OPENAI_DEPLOYMENT_GPT_4O_MINI\"],\n",
-    "        model=os.environ.get(\"OPENAI_MODEL_GPT_4O-MINI\", default=\"gpt-4o-mini\"),\n",
-    "        temperature=0,\n",
-    "    )\n",
-    "\n",
-    "\n",
-    "class LlmRes:\n",
-    "    \"\"\"\n",
-    "    Class containing the language model.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    llm = AzureChatOpenAI(\n",
-    "        azure_deployment=os.environ[\"AZURE_OPENAI_DEPLOYMENT_GPT_3O_MINI\"],\n",
-    "        model=os.environ.get(\"OPENAI_MODEL_GPT_3O-MINI\", default=\"o3-mini\"),\n",
-    "        reasoning_effort=\"high\",\n",
-    "    )\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Den enkleste måten å bruke AzureChatOpenAI"
+    "reasoning_llm = AzureChatOpenAI(\n",
+    "    azure_deployment=\"o3-mini\",\n",
+    "    model=\"o3-mini\",\n",
+    "    reasoning_effort=\"medium\",\n",
+    ")"
    ]
   },
   {
@@ -89,20 +100,7 @@
    "outputs": [],
    "source": [
     "prompt = 'Hei!'\n",
-    "response = Llm.llm.invoke(prompt)\n",
-    "\n",
-    "print(response)\n",
-    "\n",
-    "print(response.content)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Structured output\n",
-    "### Pydantic-objekter\n",
-    "- Gå igjennom hva disse objektene er, hva kan du kreve av outputen?"
+    "response = llm.invoke(prompt)"
    ]
   },
   {
@@ -111,17 +109,373 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Enkel bruk av structured output \n",
-    "# Hva i alle dager er pydantic? :D\n",
-    "# Lag en enkel klasse og kjør\n",
+    "response.content"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creating a basic chain with Langchain Expression Language (LCEL)\n",
+    "\n",
+    "TODO:\n",
+    "- Fordelene med LCEL\n",
+    "- Forklare pipe-operatoren\n",
+    "- Forklare PromptTemplate\n",
+    "\n",
+    "\n",
+    "Vurdere å droppe?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.prompts import PromptTemplate\n",
+    "prompt = PromptTemplate.from_template(\n",
+    "    \"\"\"\n",
+    "    Hi! Please talk like a {role}.\n",
+    "    \"\"\"\n",
+    ")\n",
+    "prompt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chain = prompt | llm\n",
+    "\n",
+    "chain.invoke({\"role\": \"pirate\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.output_parsers import StrOutputParser\n",
+    "chain2 = chain | StrOutputParser()\n",
+    "\n",
+    "chain2.invoke({\"role\": \"pirate\"})\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Batching and streaming"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chain2.batch(\n",
+    "    [\n",
+    "        {\"role\": \"pirate\"},\n",
+    "        {\"role\": \"cowboy\"},\n",
+    "        {\"role\": \"ninja\"},\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from time import sleep\n",
+    "for chunk in chain2.stream({\"role\": \"pirate\"}):\n",
+    "    print(chunk, end=\"\")\n",
+    "    sleep(0.2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Simple categorization of each survey reply"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "categorize_prompt = PromptTemplate.from_template(\n",
+    "\"\"\"\n",
+    "Categorize the following feedback into one of the following categories:\n",
+    "- Network\n",
+    "- Training\n",
+    "- IT-support\n",
+    "- Other\n",
+    "\n",
+    "Feedback:\n",
+    "<feedback>\n",
+    "{feedback}\n",
+    "</feedback>\n",
+    "\"\"\"\n",
+    ")\n",
+    "\n",
+    "categorize_chain = categorize_prompt | llm | StrOutputParser()\n",
+    "\n",
+    "categorize_chain.invoke({\"feedback\": \"I am very happy with the IT support I received last week.\"})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Structured output\n",
+    "\n",
+    "TODO\n",
+    "- Hvorfor trenger man strukturert output\n",
+    "- Forklare hva Pydantic er\n",
+    "- FOrklare hvordan Pydantic brukes for å få strukturert output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pydantic import BaseModel, Field\n",
     "\n",
     "class Categorize(BaseModel):\n",
-    "    \"Categorization of feedback on IT-services.\"\n",
+    "    \"Categorization of a single feedback entry from an IT survey.\"\n",
+    "    category : str = Field(description=\"The best fitting general category. Only one.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Categorize(category=\"Network\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "categorize_chain_structured_output = categorize_prompt | llm.with_structured_output(\n",
+    "    Categorize,\n",
+    "    method=\"json_schema\",\n",
+    "    strict=True\n",
+    ")\n",
     "\n",
-    "    # Thoughts: Forklar tankegangen din.\n",
-    "    category : str = Field(description=\"The best fitting general category. Only one.\")\n",
-    "   \n",
-    "    "
+    "categorize_chain_structured_output.invoke(\n",
+    "    {\"feedback\": \"I am very happy with the IT support I received last week.\"}\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TODO:\n",
+    "- Forklare hva Literal er"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Literal\n",
+    "\n",
+    "CATEGORIES = Literal[\n",
+    "    \"Network\",\n",
+    "    \"Training\",\n",
+    "    \"IT-support\",\n",
+    "    'Other'\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Literal\n",
+    "\n",
+    "categorize_prompt2 = PromptTemplate.from_template(\n",
+    "\"\"\"\n",
+    "Categorize the following feedback into the provided categories.\n",
+    "\n",
+    "Feedback:\n",
+    "<feedback>\n",
+    "{feedback}\n",
+    "</feedback>\n",
+    "\"\"\"\n",
+    ")\n",
+    "\n",
+    "\n",
+    "\n",
+    "class CategorizeFromOptions(BaseModel):\n",
+    "    \"Categorization of a single feedback entry from an IT survey.\"\n",
+    "    category: CATEGORIES = Field(\n",
+    "        description=\"Chosen category for the feedback. Choose 'Other' if the other categories provided are not a good fit.\"  ## noqa: E501\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "categorize_chain_structured_output2 = categorize_prompt2 | llm.with_structured_output(\n",
+    "    CategorizeFromOptions,\n",
+    "    method=\"json_schema\",\n",
+    "    strict=True,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = categorize_chain_structured_output2.invoke(\n",
+    "    {\"feedback\": \"I am very happy with the IT support I received last week.\"}\n",
+    ")\n",
+    "\n",
+    "result\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluate performance across whole dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def categorize_single_feedback(feedback: str) -> str:\n",
+    "    result = categorize_chain_structured_output2.invoke(\n",
+    "        {\"feedback\": feedback}\n",
+    "    )\n",
+    "    return result.category\n",
+    "\n",
+    "df[\"AI Classification\"] = df[\"Feedback\"].apply(\n",
+    "    lambda feedback: categorize_single_feedback(feedback)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(df[\"AI Classification\"] == df[\"Category\"]).value_counts()\n",
+    "\n",
+    "# TODO: Replace this be an evaluation function which is imported"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Chain-of-thought\n",
+    "\n",
+    "TODO:\n",
+    "- Forklare hva chain-of-thought er og hvorfor det kan være nyttig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CategorizeCot(BaseModel):\n",
+    "    \"Categorization of a single feedback entry from an IT survey.\"\n",
+    "    chain_of_thought: str = Field(\n",
+    "        description=\"Use this space to think through the categorization.\"\n",
+    "    )\n",
+    "    category: Literal[\n",
+    "        \"Network\",\n",
+    "        \"Training\",\n",
+    "        \"IT-support\",\n",
+    "        'Other',\n",
+    "    ] = Field(\n",
+    "        description=\"Chosen category for the feedback. Choose 'Other' if the other categories provided are not a good fit.\"  ## noqa: E501\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "categorize_chain_cot = categorize_prompt2 | llm.with_structured_output(\n",
+    "    CategorizeCot,\n",
+    "    method=\"json_schema\",\n",
+    "    strict=True,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "categorize_chain_cot.invoke(df[\"Feedback\"][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result.category"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result.category"
    ]
   },
   {
